[package]
name = "picorust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = "0.5.0"
rp2040-boot2 = { version = "0.2.0", optional = true }
embedded-hal ="0.2.5"
rp2040-hal = {version = "0.6.0", features = [ "defmt" ]}
cortex-m-rtic = "1.1.2"
cortex-m-rt = "0.7.1"
panic-halt= "0.2.0"
cortex-m = "0.7.2"